--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "react-native": "0.51.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.1.2",
     "babel-jest": "22.0.4",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react-native": "^3.2.0",
     "jest": "22.0.4",
     "react-test-renderer": "16.0.0"
   },
