--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-react-native": "^3.2.0",
     "jest": "22.0.4",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "reactotron-react-native": "^1.14.0"
   },
   "jest": {
     "preset": "react-native"
