--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-maps": "^0.19.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
