--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-maps": "^0.19.0"
+    "react-native-maps": "^0.19.0",
+    "react-native-modal": "^4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
